--- a/src/app/pages/Shop/carrito/carrito.page.html
+++ b/src/app/pages/Shop/carrito/carrito.page.html
@@ -6,70 +6,24 @@
 <ion-content class="fondo" [fullscreen]="true">
   <div class="container">
     <ion-card>
-      <ion-card-header>
-        <ion-card-title>¡Carrito de compras!</ion-card-title>
-      </ion-card-header>
-      <br>
-      <ion-card-content>
-        <ion-row>
-          <ion-col size="6">
-            <ion-card size="4">
-              <ion-img src="assets/apple1.jpg" alt="Producto"></ion-img>
-              <ion-card-header>
-                <ion-card-title>Apple watch</ion-card-title>
-                <p class="card-text">Precio: $100.000</p>
-                <!--Botones para la cantidad de los productos-->
-                <ion-button shape="round" color="success">+</ion-button>
-                <ion-button shape="round" color="success">-</ion-button>
-                <ion-input type="" required readonly class="readonly-input" value="Cantidad:1"></ion-input>
-              </ion-card-header>
-              <ion-card-content>
-                <ion-button color="danger">Eliminar</ion-button>
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
+      <ion-row>
+          <ion-card-title>Carrito</ion-card-title>
+      </ion-row>
+      <ion-row>
+        <ion-col size="3">
+          <ion-img class="img-container" src="assets/AUDIFONOS GAMERS/ag4.jpeg"></ion-img>
 
-          <ion-col size="6">
-            <ion-card size="4">
-              <ion-img src="assets/s1.jpg" alt="Producto"></ion-img>
-              <br>
-              <ion-card-header>
-                <ion-card-title>Samsung watch</ion-card-title>
-                <p class="card-text">Precio: $85.000</p>
-                <ion-button shape="round" color="success">+</ion-button>
-                <ion-button shape="round" color="success">-</ion-button>
-                <ion-input type="" required readonly class="readonly-input" value="Cantidad:1"></ion-input>
-              </ion-card-header>
-              <ion-card-content>
-                <ion-button color="danger">Eliminar</ion-button>
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
-        </ion-row>
-
-
-        <ion-card>
-          <ion-item>
-            <ion-label position="floating">Seleccione sucursal de retiro</ion-label>
-            <ion-select>
-              <ion-select-option>Sucursal paseo Ahumada 232</ion-select-option>
-              <ion-select-option>Sucursal Providencia #843, piso 2, local 24</ion-select-option>
-            </ion-select>
-          </ion-item>
-
-
-          <ion-item>
-            <ion-label position="floating">¿Quien retirara el producto?</ion-label>
-            <ion-select>
-              <ion-select-option>Juan Perez</ion-select-option>
-              <ion-select-option>Mauricio Perez</ion-select-option>
-              <ion-select-option>Otro </ion-select-option>
-              <ion-input type="text" name="pRetiro" required></ion-input>
-            </ion-select>
-          </ion-item>
-        </ion-card>
-      </ion-card-content>
-      <br>
+        </ion-col>
+        <ion-col size="3">
+          <ion-title>Precio</ion-title>
+        </ion-col>
+        <ion-col size="3">
+          <ion-title>Producto</ion-title>
+        </ion-col>
+        <ion-col size="3">
+          <ion-title>Cantidad</ion-title>
+        </ion-col>
+      </ion-row>
     </ion-card>
   </div>
 
