--- a/src/app/pages/Shop/carrito/carrito.page.scss
+++ b/src/app/pages/Shop/carrito/carrito.page.scss
@@ -4,8 +4,9 @@ ion-img {
 }
 
 ion-card {
-    width: fit-content;
-    height: max-content;
+    width: 900px;
+    align-content: center;
+    text-align: center;
 }
 
 ion-grid {
@@ -23,6 +24,9 @@ ion-grid {
             /* Ancho máximo de las tarjetas */
 
             ion-img.img-container {
+                width: 60px;
+                height: 60px;
+                //
                 max-width: 100%;
                 /* Asegurarse de que la imagen no exceda el ancho de la tarjeta */
                 height: auto;
@@ -48,6 +52,7 @@ p {
     font-family: 'ADLaM Display', cursive;
 }
 
+
 ion-card-title {
     font-size: 60px;
     margin: 5px;
@@ -70,33 +75,10 @@ ion-card-title {
 ion-content {
     --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
 }
-//COSA DEL CARRITO::after
-:host {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  
-  .demo-section + .demo-section {
-    margin-top: 16px;
-  }
-  .demo-section {
-    margin-right: 20px; /* Agrega margen al lado derecho del primer elemento */
-    display: flex; /* Utiliza flexbox para alinear verticalmente los elementos */
-    align-items: center; /* Centra verticalmente los elementos */
-  }
-  
-//BUSQUEDA:
-/* Estilos para el contenedor que contiene el ion-searchbar */
-.search-container {
+.container {
     display: flex;
     justify-content: center;
     align-items: center;
-    
-  }
-  ion-searchbar {
-    width: 400px;
-    text-align: left;
+    width: 100%;
+   
 }
-  
-  
