--- a/src/app/components/componente1/componente1.component.html
+++ b/src/app/components/componente1/componente1.component.html
@@ -1,4 +1,7 @@
 <ion-toolbar>
+  <!--BOTON PARA ATRAS-->
+    
+<ion-back-button  default-href="#" slot="start"></ion-back-button>
   <!--LOGO DEL CARRITO-->
   <div class="demo-section" slot="end">
     <mat-icon matBadge="0" matBadgeColor="primary" [routerLink]="['/carrito']"><ion-icon style="width: 30px; height: 30px; margin-right: 80px;" name="cart-outline"></ion-icon></mat-icon>
