--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,9 +14,9 @@
         <img alt="les juro que aqui habia una foto" src="assets/fondo.png" />
         <ion-card-header>
           <!--AQUI IRAN LOS BOTONES-->
-          <button mat-raised-button color="primary" [routerLink]="['/registro']">Registrarse</button>
+          <button style="font-family: 'Abril Fatface', cursive;" mat-raised-button color="primary" [routerLink]="['/registro']">Registrarse</button>
           <br>
-          <button mat-raised-button color="primary" [routerLink]="['/inicio-sesion']">Iniciar sesión</button>
+          <button style="font-family: 'Abril Fatface', cursive;" mat-raised-button color="primary" [routerLink]="['/inicio-sesion']">Iniciar sesión</button>
           <br>
         </ion-card-header>
       </ion-card>
