--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -49,7 +49,7 @@ ion-grid {
   ion-row {
     ion-card {
       border-radius: 45px;
-      background-color: rgb(0, 0, 0);
+      background-color: rgba(0, 0, 0, 0.521);
       max-width: 450px; /* Ajusta el ancho máximo de la tarjeta según tus necesidades */
       width: 650px; /* Asegura que la tarjeta ocupe todo el ancho disponible */
 
@@ -68,9 +68,46 @@ ion-grid {
     }
   }
 }
+//para que la card quede bien ajustada=
+@media(width: 425px){
+  ion-card-title {
+    font-size: 45px;
+    font-family: 'Abril Fatface', cursive;
+  }
+  /* Estilos del grid */
+  ion-grid {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Esto centra verticalmente en la ventana */
+  
+    ion-row {
+      ion-card {
+        border-radius: 45px;
+        background-color: rgba(0, 0, 0, 0.521);
+        max-width: 450px; /* Ajusta el ancho máximo de la tarjeta según tus necesidades */
+        width: 350px; /* Asegura que la tarjeta ocupe todo el ancho disponible */
+  
+        /* Estilos de la imagen */
+        img {
+          display: block;
+          margin: 0 auto; /* Centrar la imagen horizontalmente */
+          width: 250px;
+          height: 250px;
+        }
+  
+        /* Estilos del texto en la tarjeta */
+        ion-card-content {
+          padding: 20px; /* Agregar padding en lugar de margen para el contenido */
+        }
+      }
+    }
+  }
+
+}
 //esto es lo de los botones.
 button{
-  border-radius: 30px;
+  border-radius: 15px;
   font-size: 25px;
 
 }
