--- a/src/app/pages/Shop/carrito/carrito.page.html
+++ b/src/app/pages/Shop/carrito/carrito.page.html
@@ -3,28 +3,22 @@
 </ion-header>
 <!--#############################################PRODUCTOS################################################-->
 
-<ion-content class="fondo" [fullscreen]="true">
-  <div class="container">
-    <ion-card>
-      <ion-row>
-          <ion-card-title>Carrito</ion-card-title>
-      </ion-row>
-      <ion-row>
-        <ion-col size="3">
-          <ion-img class="img-container" src="assets/AUDIFONOS GAMERS/ag4.jpeg"></ion-img>
+<ion-content class="ion-padding" [fullscreen]="true">
 
-        </ion-col>
-        <ion-col size="3">
-          <ion-title>Precio</ion-title>
-        </ion-col>
-        <ion-col size="3">
-          <ion-title>Producto</ion-title>
-        </ion-col>
-        <ion-col size="3">
-          <ion-title>Cantidad</ion-title>
-        </ion-col>
-      </ion-row>
+  <div class="card-container">
+    <ion-card class="custom-card">
+      <img src="assets/AUDIFONOS GAMERS/ag4.jpeg" alt="" class="card-image">
+      <ion-card-content class="card-content">
+        <ion-card-title class="titulo" style="font-size: 30px;">Audifonos gamers negro con naranja</ion-card-title>
+        <br>
+        <p class="subti" style="font-size: 25px;">Precio: $70.000</p>
+        <p>Cantidad: 2 </p>
+        <ion-button shape="round" color="medium">+</ion-button><ion-button shape="round" color="medium">-</ion-button>
+        <br>
+        <ion-button [routerLink]="['/carrito']">Finalizar compra</ion-button>
+        <ion-button color="danger">eliminar productos</ion-button>
+
+      </ion-card-content>
     </ion-card>
   </div>
-
 </ion-content>
