--- a/src/app/pages/Shop/carrito/carrito.page.scss
+++ b/src/app/pages/Shop/carrito/carrito.page.scss
@@ -1,45 +1,37 @@
-ion-img {
-    width: 300px;
-    height: 300px;
+.card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px;
+    /* Ajusta el margen de pantalla */
 }
 
-ion-card {
-    width: 900px;
-    align-content: center;
-    text-align: center;
+.custom-card {
+    background: #222222;
+    display: flex;
+    align-items: center;
+    width: 60%;
 }
 
-ion-grid {
-    ion-row {
-        display: flex;
-        justify-content: center;
-        /* Centrar horizontalmente */
-        margin: 0 auto;
-        /* Margen superior e inferior igual a 0 y margen lateral automático para centrar en el medio */
-
-        ion-card {
-            margin: 10px;
-            /* Margen entre las tarjetas */
-            max-width: 300px;
-            /* Ancho máximo de las tarjetas */
-
-            ion-img.img-container {
-                width: 60px;
-                height: 60px;
-                //
-                max-width: 100%;
-                /* Asegurarse de que la imagen no exceda el ancho de la tarjeta */
-                height: auto;
-                /* Mantener la proporción de aspecto */
-            }
-        }
-    }
+.card-image {
+    width: 100%;
+    /* Aumenta aún más el ancho de la imagen */
+    max-width: 250px;
+    object-fit: cover;
 }
 
-
+.card-content {
+    flex: 10;
+    padding: 20px;
+    /* Agrega un poco de espacio alrededor del contenido */
+    text-align: left;
+    /* Centra el texto en pantallas más pequeñas */
+    align-self: flex-start;
+}
 
 //titulos
 
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Poppins&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Tilt+Prism&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
 
@@ -47,38 +39,91 @@ ion-grid {
 
 p {
     color: white;
-    font-size: 20px;
+    font-size: 18px;
     text-align: left;
-    font-family: 'ADLaM Display', cursive;
+    font-family: 'ADLaM Display';
+}
+.subti{
+    font-size: 18px;
+    font-family: 'Poppins', sans-serif;
+    color: white;
 }
 
+.titulo{
+    font-family: 'DM Serif Display', serif;
+    font-size: 55px;
+    text-align: left;
+    margin: 5px;
+}
 
-ion-card-title {
-    font-size: 60px;
-    margin: 5px;
-    text-align: center;
-    font-family: 'DM Serif Display', serif;
-}
-.ion-title{
-    font-family: 'DM Serif Display', serif;
-    font-size: 25px;
-    text-align: center;
-    margin: 5px;
-}
-@media(width:423px){
-    ion-title{
-        font-size: 40px;
-    }
     
 
+@media (max-width: 425px) {
+    .custom-card {
+        align-items: center;
+        /* Mantiene el contenido centrado verticalmente en pantallas grandes */
+        justify-content: space-between;
+        /* Distribuye el contenido en el eje horizontal */
+        flex-direction: column;
+        /* Coloca el contenido en fila */
+        width: 65%;
+    }
+
+    .card-content {
+        text-align: left;
+        /* Vuelve al alineamiento a la izquierda en pantallas más grandes */
+        flex: 1;
+        /* Ocupa el espacio restante */
+        padding: 25px;
+        /* Agrega un poco de espacio alrededor del contenido */
+    }
+
+    .card-image {
+        width: 100%;
+        /* Aumenta aún más el ancho de la imagen */
+        max-width: 550px;
+        object-fit: cover;
+    }
+    .titulo{
+        font-size: 15px;
+        text-align: left;
+    }
+    p{
+        font-size: 15px;
+    }
+    .subti{
+        font-size: 13px;
+    }
+    
 }
 ion-content {
     --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
 }
-.container {
+//COSA DEL CARRITO::after
+:host {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
+  .demo-section + .demo-section {
+    margin-top: 16px;
+  }
+  .demo-section {
+    margin-right: 20px; /* Agrega margen al lado derecho del primer elemento */
+    display: flex; /* Utiliza flexbox para alinear verticalmente los elementos */
+    align-items: center; /* Centra verticalmente los elementos */
+  }
+  
+//BUSQUEDA:
+/* Estilos para el contenedor que contiene el ion-searchbar */
+.search-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-   
+    
+  }
+  ion-searchbar {
+    width: 400px;
+    text-align: left;
 }
