--- a/src/app/pages/admin/agregar-p-admin/agregar-p-admin.page.scss
+++ b/src/app/pages/admin/agregar-p-admin/agregar-p-admin.page.scss
@@ -1,33 +1,106 @@
 ion-content {
-    --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
+  --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
 }
 //COSA DEL CARRITO::after
 :host {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  
-  .demo-section + .demo-section {
-    margin-top: 16px;
-  }
-  .demo-section {
-    margin-right: 20px; /* Agrega margen al lado derecho del primer elemento */
-    display: flex; /* Utiliza flexbox para alinear verticalmente los elementos */
-    align-items: center; /* Centra verticalmente los elementos */
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.demo-section + .demo-section {
+  margin-top: 16px;
+}
+.demo-section {
+  margin-right: 20px; /* Agrega margen al lado derecho del primer elemento */
+  display: flex; /* Utiliza flexbox para alinear verticalmente los elementos */
+  align-items: center; /* Centra verticalmente los elementos */
+}
+
 //BUSQUEDA:
 /* Estilos para el contenedor que contiene el ion-searchbar */
 .search-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-  }
-  ion-searchbar {
-    width: 400px;
-    text-align: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 }
-  
-  
+ion-searchbar {
+  width: 400px;
+  text-align: left;
+}
+ion-card {
+height: 715px;
+width: 500px;
+background: #222222;
+}
+
+/* Importar fuente */
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+
+ion-card-title {
+color: white;
+font-family: 'Abril Fatface', cursive;
+font-size: 50px;
+display: flex;
+justify-content: center;
+
+
+}
+
+.ion-card-content {
+font-family: 'Abril Fatface', cursive;
+font-size: 30px;
+display: flex;
+justify-content: center;
+
+}
+
+.container {
+display: flex;
+justify-content: center;
+/* Alineación horizontal al centro */
+align-items: center;
+/* Alineación vertical al centro */
+}
+
+//cuando este pequeña la pantalla:
+@media(width:320px) {
+ion-card {
+  height: 700px;
+  width: 500px;
+  background: #222222;
+}
+
+}
+
+
+/*este es el fondo*/
+ion-content {
+--background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
+}
+
+//correo=
+.example-container mat-form-field+mat-form-field {
+margin-left: 8px;
+}
+
+//clave=
+.example-container mat-form-field+mat-form-field {
+margin-left: 8px;
+}
+
+.example-right-align {
+text-align: right;
+}
+
+input.example-right-align::-webkit-outer-spin-button,
+input.example-right-align::-webkit-inner-spin-button {
+display: none;
+}
+/* Estilo para los mensajes de error */
+.error-message {
+color: red;
+font-size: 14px;
+margin-top: 5px;
+}
