--- a/src/app/pages/admin/editar-p-admin/editar-p-admin.page.scss
+++ b/src/app/pages/admin/editar-p-admin/editar-p-admin.page.scss
@@ -29,5 +29,78 @@ ion-content {
     width: 400px;
     text-align: left;
 }
-  
-  
+  ion-card {
+  height: 715px;
+  width: 500px;
+  background: #222222;
+}
+
+/* Importar fuente */
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+
+ion-card-title {
+  color: white;
+  font-family: 'Abril Fatface', cursive;
+  font-size: 50px;
+  display: flex;
+  justify-content: center;
+
+
+}
+
+.ion-card-content {
+  font-family: 'Abril Fatface', cursive;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  /* Alineación horizontal al centro */
+  align-items: center;
+  /* Alineación vertical al centro */
+}
+
+//cuando este pequeña la pantalla:
+@media(width:320px) {
+  ion-card {
+    height: 700px;
+    width: 500px;
+    background: #222222;
+  }
+
+}
+
+
+/*este es el fondo*/
+ion-content {
+  --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
+}
+
+//correo=
+.example-container mat-form-field+mat-form-field {
+  margin-left: 8px;
+}
+
+//clave=
+.example-container mat-form-field+mat-form-field {
+  margin-left: 8px;
+}
+
+.example-right-align {
+  text-align: right;
+}
+
+input.example-right-align::-webkit-outer-spin-button,
+input.example-right-align::-webkit-inner-spin-button {
+  display: none;
+}
+ /* Estilo para los mensajes de error */
+ .error-message {
+  color: red;
+  font-size: 14px;
+  margin-top: 5px;
+}
