--- a/src/app/pages/inicio/registro/registro.page.scss
+++ b/src/app/pages/inicio/registro/registro.page.scss
@@ -14,7 +14,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f0f0f0; /* Color de fondo */
+    background: #222222; /* Color de fondo */
   }
   
   .center-row {
@@ -54,4 +54,10 @@
   
   ion-content {
     --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
+}
+
+.center-buttons {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px; /* Agrega margen superior si es necesario */
 }
