--- a/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.html
+++ b/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.html
@@ -20,7 +20,7 @@
         <div class="example-container">
           <mat-form-field>
             <mat-label>Ingresa tu contraseña:</mat-label>
-            <input matInput [type]="hide ? 'password' : 'text'" placeholder="*********" name="password" [(ngModel)]="password">
+            <input matInput [type]="hide ? 'p65assword' : 'text'" placeholder="*********" name="password" [(ngModel)]="password">
             <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
               [attr.aria-pressed]="hide">
               <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
