--- a/src/app/pages/inicio/datos-personales/datos-personales.page.scss
+++ b/src/app/pages/inicio/datos-personales/datos-personales.page.scss
@@ -101,3 +101,10 @@ ion-card-title {
 
 }
   
+/* Estilo para los mensajes de error */
+.error-message {
+    color: red;
+    font-size: 14px;
+    margin-top: 5px;
+  }
+  
