--- a/src/app/pages/inicio/registro/registro.page.html
+++ b/src/app/pages/inicio/registro/registro.page.html
@@ -46,23 +46,24 @@
               <p *ngIf="!validateRutU(rutUValue)">El formato del RUT ingresado no es correcto</p>
             </div>
 
-            <!--CORREO-->
+            <!--
             <div class="input-row">
               <ion-input label="Correo electrónico:" type="email" label-placement="floating" fill="outline"
                 placeholder="ayuda@gmail.com" required (keydown)="onKeyDown($event)" [(ngModel)]="email" name="email"
                 #emailInput="ngModel" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"></ion-input>
             </div>
-            <!--VALIDACION-->
+            
             <ion-note class="error-message" *ngIf="emailInput.invalid && (emailInput.dirty || emailInput.touched)">
               correo no valido y no puede estar vacío
             </ion-note>
+          -->
 
 
             <!--CLAVE-->
             <ion-input label="Contraseña:" type="password" label-placement="floating" fill="outline"
               placeholder="******" required [(ngModel)]="password" name="password" #passwordInput="ngModel"
               minlength="3" maxlength="15" (keydown)="onKeyDowns($event)"
-              pattern="^(?=.*\d)(?=.*[a-zA-Z])(?=.*[!@#$%^&*]).{3,15}$"></ion-input>
+              pattern="^(?=.*\d)(?=.*[a-zA-Z])(?=.*[!@#$%^&.,-_*).{3,15}$"></ion-input>
             <!--VALIDACION-->
             <div class="error-message" *ngIf="passwordInput.invalid && (passwordInput.dirty || passwordInput.touched)">
               <p *ngIf="passwordInput.errors?.['required']">La contraseña es requerida.</p>
@@ -115,8 +116,8 @@
 
             <!--BOTON-->
             <ion-button color="dark" class="center-buttons" [disabled]=" !nombreUModel.valid || !apellidoUModel.valid || !preguntaUModel.valid ||
-                         !respuestaUModel.valid ||!emailInput.valid || !passwordInput.valid || 
-                         !confirmPasswordInput.valid" type="submit">
+                         !respuestaUModel.valid || !passwordInput.valid || 
+                         !confirmPasswordInput.valid" (click)="irAPaginaSiguiente()">
               Registrarse</ion-button>
             <p1 [routerLink]="['/inicio-sesion']" style="text-align: center;"> ¿Ya tienes una cuenta? Inicia sesión aquí</p1><br>
           </form>
