--- a/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.scss
+++ b/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.scss
@@ -1,7 +1,12 @@
 ion-card {
-  height: 350px;
+  border-radius: 20px;
+  height: 500px;
   width: 500px;
   background: #222222;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  
 }
 
 /* Importar fuente */
@@ -22,8 +27,10 @@ ion-card-title {
   font-size: 30px;
   display: flex;
   justify-content: center;
-
+  align-items: center;
+  text-align: center;
 }
+
 
 .container {
   display: flex;
@@ -31,15 +38,15 @@ ion-card-title {
   /* Alineación horizontal al centro */
   align-items: center;
   /* Alineación vertical al centro */
-  height: 95vh;
+
   /* Opcional: ajusta la altura del contenedor al 100% del viewport */
 }
 
 //cuando este pequeña la pantalla:
-@media(width:320px) {
+@media(width:425px) {
   ion-card {
-    height: 450px;
-    width: 500px;
+    height: 500px;
+    width: 400px;
     background: #222222;
   }
 
@@ -68,4 +75,13 @@ ion-content {
 input.example-right-align::-webkit-outer-spin-button,
 input.example-right-align::-webkit-inner-spin-button {
   display: none;
+}
+img{
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+  width: 150px;
+  height: 150px;
+  margin: auto;
 }
