--- a/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.html
+++ b/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.html
@@ -3,36 +3,47 @@
 
 
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="padding">
   <div class="container">
-    <ion-card class="ion-text-center">
-      <ion-card-header>
-        <ion-card-title>Inicio de sesión</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <div class="example-container">
-          <mat-form-field>
-            <mat-label>Ingresa tu correo:</mat-label>
-            <input matInput placeholder="pat@example.com" [formControl]="email" required name="gmail" [(ngModel)]="gmail">
-            <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
-          </mat-form-field>
-        </div>
-        <div class="example-container">
-          <mat-form-field>
-            <mat-label>Ingresa tu contraseña:</mat-label>
-            <input matInput [type]="hide ? 'p65assword' : 'text'" placeholder="*********" name="password" [(ngModel)]="password">
-            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-              [attr.aria-pressed]="hide">
-              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-            </button>
-          </mat-form-field>
-        </div>
-        <ion-button (click)="inicio_sesion()" color="dark">Iniciar sesión</ion-button>
-        <br>
-        <p1 [routerLink]="['/registro']">¿Aún no tienes una cuenta? Regístrate aquí</p1><br>
-        <p1 [routerLink]="['/recuperar-clave']">¿Se le olvidó la contraseña? Ingrese aquí</p1>
 
-      </ion-card-content>
-    </ion-card>
+    <div class="card-container">
+      
+      <ion-card class="custom-card">
+
+        <img src="https://assets.stickpng.com/thumbs/585e4bf3cb11b227491c339a.png" alt="Icono de Usuario"
+          class="centered-image">
+
+        <ion-card-header>
+
+          <ion-card-title>Inicio de sesión</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          <div class="example-container">
+            <mat-form-field>
+              <mat-label>Ingresa tu correo:</mat-label>
+              <input matInput placeholder="pat@example.com" [formControl]="email" required name="gmail"
+                [(ngModel)]="gmail">
+              <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+            </mat-form-field>
+          </div>
+          <div class="example-container">
+            <mat-form-field>
+              <mat-label>Ingresa tu contraseña:</mat-label>
+              <input matInput [type]="hide ? 'password' : 'text'" placeholder="*********" name="password"
+                [(ngModel)]="password">
+              <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+                [attr.aria-pressed]="hide">
+                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+              </button>
+            </mat-form-field>
+          </div>
+          <ion-button (click)="inicio_sesion()" color="dark">Iniciar sesión</ion-button>
+          <br>
+          <p1 [routerLink]="['/registro']">¿Aún no tienes una cuenta? Regístrate aquí</p1><br>
+          <p1 [routerLink]="['/recuperar-clave']">¿Se le olvidó la contraseña? Ingrese aquí</p1>
+        </ion-card-content>
+      </ion-card>
+    </div>
+
   </div>
 </ion-content>
