--- a/src/app/pages/Shop/tienda/tienda.page.scss
+++ b/src/app/pages/Shop/tienda/tienda.page.scss
@@ -124,4 +124,8 @@ ion-content {
     justify-content: center;
     margin-top: 20px; /* Agrega margen superior si es necesario */
   }
-  
+//LAS PIPES=
+
+td{
+    font-size: 40px;
+}
