--- a/src/app/pages/Shop/tienda/tienda.page.html
+++ b/src/app/pages/Shop/tienda/tienda.page.html
@@ -35,7 +35,7 @@
           <ion-card-header>
             <ion-card-title class="ion-title">Audifonos gamers<br>rojos con negro</ion-card-title>
             <ion-card-content>
-              <p>$50.000</p>
+              <td >{{dinero | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
@@ -48,7 +48,7 @@
           <ion-card-header>
             <ion-card-title class="ion-title">Audifonos gamers<br>negro con anaranjado</ion-card-title>
             <ion-card-content>
-              <p>$75.000</p>
+              <td >{{dinero2 | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
@@ -60,7 +60,7 @@
           <ion-card-header>
             <ion-card-title class="ion-title">Audifonos gamers<br>lila con blanco</ion-card-title>
             <ion-card-content>
-              <p>$35.000</p>
+              <td >{{dinero3 | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
@@ -77,7 +77,7 @@
           <ion-card-header>
             <ion-card-title class="ion-title">Audifonos Bluetooth<br>morados</ion-card-title>
             <ion-card-content>
-              <p>$39.990</p>
+              <td >{{dinero4 | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
@@ -89,7 +89,7 @@
           <ion-card-header>
             <ion-card-title class="ion-title">Audifonos Bluetooth<br>azules</ion-card-title>
             <ion-card-content>
-              <p>$42.000</p>
+              <td >{{dinero5 | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
@@ -101,7 +101,7 @@
           <ion-card-header>
             <ion-card-title class="ion-title">Audifonos Bluetooth<br>verdes</ion-card-title>
             <ion-card-content>
-              <p>$269.000</p>
+              <td >{{dinero6 | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
@@ -119,7 +119,7 @@
           <ion-card-header>
             <ion-card-title class="ion-title">Reloj Analógico<br>negro con azules</ion-card-title>
             <ion-card-content>
-              <p>$119.000</p>
+              <td >{{dinero7 | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
@@ -131,7 +131,7 @@
           <ion-card-header>
             <ion-card-title class="ion-title">Reloj Analógico <br>negro fondo azul</ion-card-title>
             <ion-card-content>
-              <p>$194.990</p>
+              <td >{{dinero8 | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
@@ -143,7 +143,7 @@
           <ion-card-header>
             <ion-card-title class="ion-title">Reloj Analógico <br>amarillo con negro</ion-card-title>
             <ion-card-content>
-              <p>$289.000</p>
+              <td >{{dinero9 | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
@@ -161,7 +161,7 @@
           <ion-card-header>
             <ion-card-title class="ion-title">Reloj Digital negro<br> con borde azul</ion-card-title>
             <ion-card-content>
-              <p>$61.990</p>
+              <td >{{dinero10 | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
@@ -173,7 +173,7 @@
           <ion-card-header>
             <ion-card-title class="ion-title">Reloj Digital<br>negro</ion-card-title>
             <ion-card-content>
-              <p>$54.000</p>
+              <td >{{dinero11 | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
@@ -185,7 +185,7 @@
           <ion-card-header>
             <ion-card-title class="ion-title">Reloj Digital<br>blanco</ion-card-title>
             <ion-card-content>
-              <p>$194.550</p>
+              <td >{{dinero12 | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
@@ -202,7 +202,7 @@
           <ion-card-header>
             <ion-card-title class="ion-title">Reloj Smartwatch<br>Azul</ion-card-title>
             <ion-card-content>
-              <p>$139.000</p>
+              <td >{{dinero13 | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
@@ -214,7 +214,7 @@
           <ion-card-header>
             <ion-card-title class="ion-title">Reloj Smartwatch<br>anaranjado</ion-card-title>
             <ion-card-content>
-              <p>$240.000</p>
+              <td >{{dinero14 | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
@@ -226,7 +226,7 @@
           <ion-card-header>
             <ion-card-title class="ion-title">Reloj Smartwatch<br>morado</ion-card-title>
             <ion-card-content>
-              <p>$360.000</p>
+              <td >{{dinero15 | currency :'$':true:'4.0-0'}}</td>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
