--- a/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.html
+++ b/src/app/pages/inicio/inicio-sesion/inicio-sesion.page.html
@@ -7,7 +7,7 @@
   <div class="container">
 
     <div class="card-container">
-      
+
       <ion-card class="custom-card">
 
         <img src="https://assets.stickpng.com/thumbs/585e4bf3cb11b227491c339a.png" alt="Icono de Usuario"
@@ -36,8 +36,11 @@
                 <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
               </button>
             </mat-form-field>
+            <br>
+            <ion-button type="submit" (click)="play()">Borrar datos</ion-button> 
+
           </div>
-          <ion-button (click)="inicio_sesion()" color="dark">Iniciar sesión</ion-button>
+          <ion-button (click)="borrarDatos()" (click)="inicio_sesion()" color="dark">Iniciar sesión</ion-button>
           <br>
           <p1 [routerLink]="['/registro']">¿Aún no tienes una cuenta? Regístrate aquí</p1><br>
           <p1 [routerLink]="['/recuperar-clave']">¿Se le olvidó la contraseña? Ingrese aquí</p1>
